# llama.cpp

./: CMakeLists.txt  README.md
.github/workflows/: codspeed.yml
benchmark/: CMakeLists.txt
benchmarks/: CMakeLists.txt  bench-gated-delta-net.cpp  bench-quantize.cpp  bench-tokenizer.cpp
ggml/src/ggml-cpu/: ops.cpp  vec.cpp  vec.h
src/: llama-vocab.cpp
